plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
}

version = mod_version
group = mod_group_id
base { archivesName = "astral_repository-fabric-${minecraft_version}" }
java { toolchain.languageVersion = JavaLanguageVersion.of(25) }

repositories {
    maven { url = 'https://maven.terraformersmc.com/releases' }
    maven { url = 'https://maven.blamejared.com' }
    maven { url = 'https://api.modrinth.com/maven' }
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
    implementation include('maven.modrinth:forge-config-api-port:rSd3GiG8')
    implementation include('teamreborn:energy:5.0.0')
    compileOnly 'dev.emi:emi-neoforge:1.1.24+1.21.1:api'
    compileOnly 'mezz.jei:jei-26.2-fabric-api:30.32.0.222'
    compileOnly 'maven.modrinth:jade:26.2.11+fabric'
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

loom {
    runs {
        client {
            client()
            runDir 'run-client'
            vmArg '-Dastral_repository.testClient=true'
        }
        server {
            server()
            runDir 'run-server'
            programArg '--nogui'
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 25
}
tasks.named('test', Test) { useJUnitPlatform() }
tasks.named('processResources') {
    inputs.property 'version', project.version
    inputs.property 'clientSmoke', project.hasProperty('clientSmoke')
    filesMatching('fabric.mod.json') { expand version: project.version }
}
tasks.named('jar') {
    from('LICENSE')
    exclude 'com/cappleapple/astralrepository/gametest/**'
    doFirst {
        if (!file('src/main/java/com/cappleapple/astralrepository/AstralRepository.java').exists()) {
            throw new GradleException('Fabric source migration has not been installed; refusing to package an empty port.')
        }
    }
}

sourceSets.main.java.srcDirs = ['src/main/java']
sourceSets.main.java.exclude 'com/cappleapple/astralrepository/gametest/**', 'com/cappleapple/astralrepository/compat/Curios*.java', 'com/cappleapple/astralrepository/port/PortRuntimeSmoke.java', 'com/cappleapple/astralrepository/port/AstralFluidTank.java', 'com/cappleapple/astralrepository/port/AstralEnergyStorage.java'
tasks.named('compileJava') { doFirst { layout.buildDirectory.file('compile-classpath.txt').get().asFile.text = classpath.asPath }; options.compilerArgs += ['-Xmaxerrs','1000'] }


if (project.hasProperty('clientSmoke')) {
    sourceSets.main.java.srcDir 'src/clientSmoke/java'
    tasks.named('jar') {
        doFirst { throw new GradleException('Client smoke metadata is development-only; build release artifacts without -PclientSmoke.') }
    }
    tasks.named('processResources') {
        doLast {
            def metadata = new groovy.json.JsonSlurper().parse(file("${destinationDir}/fabric.mod.json"))
            metadata.entrypoints.client.add('com.cappleapple.astralrepository.smoke.ModernClientSmoke')
            file("${destinationDir}/fabric.mod.json").text = groovy.json.JsonOutput.prettyPrint(groovy.json.JsonOutput.toJson(metadata))
        }
    }
    loom.runs {
        clientSmoke {
            client()
            runDir 'build/smoke-client'
            vmArg '-Dastral_repository.testClient=true'
            vmArg '-Dastral_repository.modernClientSmoke=true'
        }
    }
}

apply from: 'tools/fabric-validation.gradle'
